# generate-shortcuts-skill

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  COMMUNITY_PRODUCT_PLAN.md  DEVELOPMENT.md  GEMINI_WEB_ARCHITECTURE.md  MAC_CLOUDFLARE_DEPLOYMENT.md
backend/: .env.example  cloudflared-config.yml  pyproject.toml  requirements.txt  wrangler.toml
backend/app/: __init__.py  main.py
backend/app/api/: community.py  jobs.py  shortcuts.py  users.py
backend/app/models/: shortcuts.py
backend/app/services/: auth.py  d1_repository.py  file_store.py  gemini_client.py  name_resolver.py  plist_builder.py  prompt_builder.py  r2_storage.py  settings.py  shortcut_generator.py  signer.py  validator.py
backend/app/workers/: signing_worker.py
backend/migrations/: 001_init.sql  002_seed.sql
frontend/: index.html  package-lock.json  package.json  wrangler.toml
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: shortcuts.ts
