[project]
name = "shortcuts-generator-backend"
version = "0.1.0"
description = "FastAPI backend for generating and signing Apple Shortcuts."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
